# HamatteruProject

./: .env  .gitignore  README.md  manage.py  memo.txt  myhealthproject4649-be1d53621eaf.json  pyproject.toml  runserver.sh  testtest.py  want_to.txt
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20220103_2040.py  0002_remove_customuser_login_count.py
config/: settings.py  urls.py
config/settings/: base.py  local.py  production.py
health/: filters.py  forms.py  models.py  urls.py  views.py
health/migrations/: 0001_initial.py  0002_alter_list_date.py
life/: admin.py  forms.py  models.py  urls.py  views.py
life/migrations/: 0001_initial.py
myhealthapp/: apps.py  filters.py  forms.py  graph.py  models.py  urls.py  views.py
myhealthapp/migrations/: 0001_initial.py  0002_auto_20211228_2217.py  0002_list_sleep_time.py  0003_alter_list_sleep_time.py  0003_auto_20210207_2045.py  0004_auto_20210207_2048.py  0005_auto_20210209_1957.py  0006_auto_20210210_2259.py  0007_auto_20210211_1454.py  0008_auto_20210211_1506.py  0009_auto_20210211_1518.py  0010_auto_20210211_1534.py  0011_auto_20210212_1930.py  0012_auto_20210214_1800.py  0013_auto_20210214_1803.py  0014_auto_20210217_1637.py  0015_auto_20210217_1638.py
myhealthapp/tests/: test_views.py
myhealthapp/writer/: g_spread.py
myhelps/: apps.py  urls.py  views.py
myhelps/tests/: test_views.py
templates/: base.html  pagination.html
templates/accounts/: home.html  login.html  register.html  registration_complete.html  user_detail.html  user_update.html
templates/health/: detail.html  list.html
templates/life/: create.html  detail.html  (+2 more)
(+30 files in other folders)
