[tool.poetry]
name = "health_management_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.5"
psycopg2-binary = "^2.8.6"
gspread = "^3.6.0"
oauth2client = "^4.1.3"
django-bootstrap-datepicker-plus = "^3.0.5"
django-bootstrap4 = "^2.3.1"
django-crispy-forms = "^1.11.0"
django-filter = "^2.4.0"
django-postgres-timestamp-without-tz = "^2021.1.15"
gunicorn = "^20.0.4"
django-environ = "^0.8.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
